Update icons and fix Dark mode Sidebar

--- a/packages/panels/src/components/nav-bar/NavBarSideMenuButton.module.css
+++ b/packages/panels/src/components/nav-bar/NavBarSideMenuButton.module.css
@@ -59,7 +59,7 @@
       );
     }
 
-    &:focus {
+    &:focus-visible {
       --current-background-color: var(
         --swui-nav-bar-side-menu-button-background-color-focus
       );
@@ -83,7 +83,7 @@
       );
     }
 
-    &:focus {
+    &:focus-visible {
       --current-background-color: var(
         --swui-nav-bar-side-menu-button-background-dark-color-focus
       );
