--- a/packages/panels/src/components/sidebar-menu/SidebarMenu.module.css
+++ b/packages/panels/src/components/sidebar-menu/SidebarMenu.module.css
@@ -6,11 +6,26 @@
   --swui-sidebar-menu-icon-color: var(--swui-white);
 
   --swui-sidebar-menu-background-color: var(--lhds-color-blue-500);
-  --swui-sidebar-menu-background-color-hover: var(--lhds-color-blue-600);
-  --swui-sidebar-menu-background-color-active: var(--lhds-color-blue-900);
-  --swui-sidebar-menu-item-selected: var(--lhds-color-blue-700);
+  --swui-sidebar-menu-background-color-hover: var(--lhds-color-blue-700);
+  --swui-sidebar-menu-background-color-active: var(--lhds-color-blue-700);
+  --swui-sidebar-menu-item-selected: var(--lhds-color-blue-600);
   --swui-sidebar-menu-content-padding: var(--swui-metrics-indent)
     var(--swui-metrics-indent) var(--swui-metrics-indent) 0;
+
+  --swui-sidebar-background-dark-color: var(--lhds-color-blue-800);
+  --swui-sidebar-dark-item-background-color-hover: var(--lhds-color-blue-600);
+  --swui-sidebar-dark-item-background-color-focus: var(--lhds-color-blue-600);
+  --swui-sidebar-dark-item-background-color-active: var(--lhds-color-blue-500);
+  --swui-sidebar-dark-item-background-color-selected: var(--lhds-color-blue-700);
+  --swui-sidebar-dark-item-background-color-selected-hover: var(
+    --lhds-color-blue-600
+  );
+  --swui-sidebar-dark-item-background-color-selected-focus: var(
+    --lhds-color-blue-600
+  );
+  --swui-sidebar-dark-item-background-color-selected-active: var(
+    --lhds-color-blue-500
+  );
 
   /* Current */
   --current-separator-color: var(--swui-sidebar-menu-separator-color);
@@ -26,12 +41,25 @@
   --current-item-selected: var(--swui-sidebar-menu-item-selected);
   --current-content-padding: var(--swui-sidebar-menu-content-padding);
 
-  background-color: var(--current-background-color);
+  &.dark {
+    --current-separator-color: var(--swui-sidebar-menu-separator-color);
+    --current-background-color: var(--swui-sidebar-background-dark-color);
+    --current-background-color-hover: var(
+      --swui-sidebar-dark-item-background-color-hover
+    );
+    --current-background-color-active: var(
+      --swui-sidebar-dark-item-background-color-active
+    );
+    --current-item-selected: var(--swui-sidebar-dark-item-background-color-selected);
+  }
 
+  background-color: var(--current-background-color);
   height: 100vh;
 
   button {
     --swui-button-text-color: var(--swui-white);
-    --swui-button-background-color-hover: var(--swui-sidebar-menu-background-color-hover);
+    --swui-button-background-color-hover: var(
+      --swui-sidebar-menu-background-color-hover
+    );
   }
 }
